src/com/wittawat/tcc/TCCParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/nook/NetBeansProjects/JTCC/TCC.g 2010-03-06 18:43:22

package com.wittawat.tcc;
import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**
 * A TCC (Thai Character Cluster) grammar for ANTLR (http://www.antlr.org).
 * This a Java port of TCC originally written in C.
 * 
 * The grammar comes from grammorph.BCon TCC version 1.7.1 developed by by Mr.Jakkrit TeCho.
 *
 * Note that ANTLR can also generates code for lexer, and parser 
 * in other languages as well using this same file (not only Java).
 *
 * @author Wittawat Jitkrittum
 * Dec 13, 2009
 */
public class TCCParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEWLINES", "EE", "MAITAIKHU", "TON", "SARA_AA", "A", "SARA_II", "YOYAK", "O_ANG", "SARA_I", "THANTHAKHAT", "SARA_UEE", "MAI_HAN_AKAT", "WA", "SARA_U", "AE", "OO", "TCCIGNORE", "DONT_KNOW", "SARA_UU", "SARA_AM", "SARA_UE", "MAIMUAN", "MAIMALAI", "CON", "WS"
    };
    public static final int SARA_II=10;
    public static final int O_ANG=12;
    public static final int SARA_UE=25;
    public static final int YOYAK=11;
    public static final int A=9;
    public static final int MAIMUAN=26;
    public static final int SARA_I=13;
    public static final int DONT_KNOW=22;
    public static final int SARA_AA=8;
    public static final int MAI_HAN_AKAT=16;
    public static final int THANTHAKHAT=14;
    public static final int EOF=-1;
    public static final int MAIMALAI=27;
    public static final int SARA_AM=24;
    public static final int TCCIGNORE=21;
    public static final int SARA_U=18;
    public static final int WS=29;
    public static final int NEWLINES=4;
    public static final int SARA_UEE=15;
    public static final int MAITAIKHU=6;
    public static final int OO=20;
    public static final int CON=28;
    public static final int WA=17;
    public static final int AE=19;
    public static final int SARA_UU=23;
    public static final int EE=5;
    public static final int TON=7;

    // delegates
    // delegators


        public TCCParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TCCParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TCCParser.tokenNames; }
    public String getGrammarFileName() { return "/home/nook/NetBeansProjects/JTCC/TCC.g"; }

     //Members of Parser
    	private String delimiter = "|";
    	private int curIndex =0;
    	private Vector<Integer> endIndexes = new Vector<Integer>();
    	private StringBuilder delimitedOutput = new StringBuilder();
    	public Vector<Integer> getEndIndexes(){
    		return endIndexes;
    	}
    	public String getDelimiter(){
    		return delimiter;
    	}
    	public void setDelimiter(String delimiter){
    		this.delimiter = delimiter;
    	}
        	
        	public String getDelimitedOutput(){
     	
         		return delimitedOutput.toString();
        	}
        	
        	private void addNextIndex(String word){
        		if(word !=null && !word.equals("")){
    	    		int wordLength = word.length();
    	    		curIndex += wordLength;
    	    		endIndexes.add(curIndex);
    	    		
    	    		delimitedOutput.append(word).append(delimiter);
        		}
        	}
        	private void addNewLine(String newLine){
        		if(newLine != null){
        			curIndex += newLine.length();
      	  		delimitedOutput.append(newLine);
        		}
    	}



    public static class stream_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stream"
    // /home/nook/NetBeansProjects/JTCC/TCC.g:73:1: stream : tcclist ( NEWLINES )? EOF ;
    public final TCCParser.stream_return stream() throws RecognitionException {
        TCCParser.stream_return retval = new TCCParser.stream_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NEWLINES2=null;
        Token EOF3=null;
        TCCParser.tcclist_return tcclist1 = null;


        Object NEWLINES2_tree=null;
        Object EOF3_tree=null;

        try {
            // /home/nook/NetBeansProjects/JTCC/TCC.g:73:8: ( tcclist ( NEWLINES )? EOF )
            // /home/nook/NetBeansProjects/JTCC/TCC.g:74:2: tcclist ( NEWLINES )? EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_tcclist_in_stream57);
            tcclist1=tcclist();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, tcclist1.getTree());
            // /home/nook/NetBeansProjects/JTCC/TCC.g:75:2: ( NEWLINES )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==NEWLINES) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:75:3: NEWLINES
                    {
                    NEWLINES2=(Token)match(input,NEWLINES,FOLLOW_NEWLINES_in_stream61); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NEWLINES2_tree = (Object)adaptor.create(NEWLINES2);
                    adaptor.addChild(root_0, NEWLINES2_tree);
                    }
                    if ( state.backtracking==0 ) {

                      		addNewLine((NEWLINES2!=null?NEWLINES2.getText():null));
                      	
                    }

                    }
                    break;

            }

            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_stream69); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stream"

    public static class tcclist_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tcclist"
    // /home/nook/NetBeansProjects/JTCC/TCC.g:81:2: tcclist : ( newlines tcc )* ;
    public final TCCParser.tcclist_return tcclist() throws RecognitionException {
        TCCParser.tcclist_return retval = new TCCParser.tcclist_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        TCCParser.newlines_return newlines4 = null;

        TCCParser.tcc_return tcc5 = null;



        try {
            // /home/nook/NetBeansProjects/JTCC/TCC.g:81:9: ( ( newlines tcc )* )
            // /home/nook/NetBeansProjects/JTCC/TCC.g:81:11: ( newlines tcc )*
            {
            root_0 = (Object)adaptor.nil();

            // /home/nook/NetBeansProjects/JTCC/TCC.g:81:11: ( newlines tcc )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==NEWLINES) ) {
                    int LA2_1 = input.LA(2);

                    if ( ((LA2_1>=EE && LA2_1<=CON)) ) {
                        alt2=1;
                    }


                }
                else if ( ((LA2_0>=EE && LA2_0<=CON)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/nook/NetBeansProjects/JTCC/TCC.g:82:2: newlines tcc
            	    {
            	    pushFollow(FOLLOW_newlines_in_tcclist85);
            	    newlines4=newlines();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, newlines4.getTree());
            	    pushFollow(FOLLOW_tcc_in_tcclist88);
            	    tcc5=tcc();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, tcc5.getTree());
            	    if ( state.backtracking==0 ) {
            	       
            	      		addNewLine((newlines4!=null?input.toString(newlines4.start,newlines4.stop):null)); 
            	      		addNextIndex( (tcc5!=null?input.toString(tcc5.start,tcc5.stop):null)); 
            	      	
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tcclist"

    public static class tcc_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tcc"
    // /home/nook/NetBeansProjects/JTCC/TCC.g:87:1: tcc : ( EE con MAITAIKHU con | EE con con ( TON )? SARA_AA A | EE con con SARA_II ( TON )? YOYAK A | ( EE con con SARA_II ( TON )? YOYAK tccfirst )=> EE con con SARA_II ( TON )? YOYAK | EE con con O_ANG A | EE con con MAITAIKHU con | EE con SARA_I con THANTHAKHAT con | EE con SARA_I ( TON )? con | EE con SARA_II ( TON )? YOYAK A | EE con SARA_II O_ANG ( A )? | EE con SARA_UEE TON O_ANG ( A )? | EE con SARA_UEE O_ANG ( A )? | ( EE con vfront ( TON )? YOYAK tccfirst )=> EE con vfront ( TON )? YOYAK | EE con ( TON )? ( SARA_AA )? ( A )? | con MAI_HAN_AKAT ( TON )? WA | con vback ( TON )? con ( SARA_U | SARA_I | A )? | con ( SARA_I | SARA_U )? THANTHAKHAT | con vneedl ( TON )? | con MAITAIKHU | con ( TON )? ( vO1 )? | AE con MAITAIKHU con | AE con con THANTHAKHAT | AE con ( TON )? A | AE con con MAITAIKHU con | AE con con con THANTHAKHAT | OO con ( TON )? A | vO2 con ( TON )? | dont_know );
    public final TCCParser.tcc_return tcc() throws RecognitionException {
        TCCParser.tcc_return retval = new TCCParser.tcc_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EE6=null;
        Token MAITAIKHU8=null;
        Token EE10=null;
        Token TON13=null;
        Token SARA_AA14=null;
        Token A15=null;
        Token EE16=null;
        Token SARA_II19=null;
        Token TON20=null;
        Token YOYAK21=null;
        Token A22=null;
        Token EE23=null;
        Token SARA_II26=null;
        Token TON27=null;
        Token YOYAK28=null;
        Token EE29=null;
        Token O_ANG32=null;
        Token A33=null;
        Token EE34=null;
        Token MAITAIKHU37=null;
        Token EE39=null;
        Token SARA_I41=null;
        Token THANTHAKHAT43=null;
        Token EE45=null;
        Token SARA_I47=null;
        Token TON48=null;
        Token EE50=null;
        Token SARA_II52=null;
        Token TON53=null;
        Token YOYAK54=null;
        Token A55=null;
        Token EE56=null;
        Token SARA_II58=null;
        Token O_ANG59=null;
        Token A60=null;
        Token EE61=null;
        Token SARA_UEE63=null;
        Token TON64=null;
        Token O_ANG65=null;
        Token A66=null;
        Token EE67=null;
        Token SARA_UEE69=null;
        Token O_ANG70=null;
        Token A71=null;
        Token EE72=null;
        Token TON75=null;
        Token YOYAK76=null;
        Token EE77=null;
        Token TON79=null;
        Token SARA_AA80=null;
        Token A81=null;
        Token MAI_HAN_AKAT83=null;
        Token TON84=null;
        Token WA85=null;
        Token TON88=null;
        Token set90=null;
        Token set92=null;
        Token THANTHAKHAT93=null;
        Token TON96=null;
        Token MAITAIKHU98=null;
        Token TON100=null;
        Token AE102=null;
        Token MAITAIKHU104=null;
        Token AE106=null;
        Token THANTHAKHAT109=null;
        Token AE110=null;
        Token TON112=null;
        Token A113=null;
        Token AE114=null;
        Token MAITAIKHU117=null;
        Token AE119=null;
        Token THANTHAKHAT123=null;
        Token OO124=null;
        Token TON126=null;
        Token A127=null;
        Token TON130=null;
        TCCParser.con_return con7 = null;

        TCCParser.con_return con9 = null;

        TCCParser.con_return con11 = null;

        TCCParser.con_return con12 = null;

        TCCParser.con_return con17 = null;

        TCCParser.con_return con18 = null;

        TCCParser.con_return con24 = null;

        TCCParser.con_return con25 = null;

        TCCParser.con_return con30 = null;

        TCCParser.con_return con31 = null;

        TCCParser.con_return con35 = null;

        TCCParser.con_return con36 = null;

        TCCParser.con_return con38 = null;

        TCCParser.con_return con40 = null;

        TCCParser.con_return con42 = null;

        TCCParser.con_return con44 = null;

        TCCParser.con_return con46 = null;

        TCCParser.con_return con49 = null;

        TCCParser.con_return con51 = null;

        TCCParser.con_return con57 = null;

        TCCParser.con_return con62 = null;

        TCCParser.con_return con68 = null;

        TCCParser.con_return con73 = null;

        TCCParser.vfront_return vfront74 = null;

        TCCParser.con_return con78 = null;

        TCCParser.con_return con82 = null;

        TCCParser.con_return con86 = null;

        TCCParser.vback_return vback87 = null;

        TCCParser.con_return con89 = null;

        TCCParser.con_return con91 = null;

        TCCParser.con_return con94 = null;

        TCCParser.vneedl_return vneedl95 = null;

        TCCParser.con_return con97 = null;

        TCCParser.con_return con99 = null;

        TCCParser.vO1_return vO1101 = null;

        TCCParser.con_return con103 = null;

        TCCParser.con_return con105 = null;

        TCCParser.con_return con107 = null;

        TCCParser.con_return con108 = null;

        TCCParser.con_return con111 = null;

        TCCParser.con_return con115 = null;

        TCCParser.con_return con116 = null;

        TCCParser.con_return con118 = null;

        TCCParser.con_return con120 = null;

        TCCParser.con_return con121 = null;

        TCCParser.con_return con122 = null;

        TCCParser.con_return con125 = null;

        TCCParser.vO2_return vO2128 = null;

        TCCParser.con_return con129 = null;

        TCCParser.dont_know_return dont_know131 = null;


        Object EE6_tree=null;
        Object MAITAIKHU8_tree=null;
        Object EE10_tree=null;
        Object TON13_tree=null;
        Object SARA_AA14_tree=null;
        Object A15_tree=null;
        Object EE16_tree=null;
        Object SARA_II19_tree=null;
        Object TON20_tree=null;
        Object YOYAK21_tree=null;
        Object A22_tree=null;
        Object EE23_tree=null;
        Object SARA_II26_tree=null;
        Object TON27_tree=null;
        Object YOYAK28_tree=null;
        Object EE29_tree=null;
        Object O_ANG32_tree=null;
        Object A33_tree=null;
        Object EE34_tree=null;
        Object MAITAIKHU37_tree=null;
        Object EE39_tree=null;
        Object SARA_I41_tree=null;
        Object THANTHAKHAT43_tree=null;
        Object EE45_tree=null;
        Object SARA_I47_tree=null;
        Object TON48_tree=null;
        Object EE50_tree=null;
        Object SARA_II52_tree=null;
        Object TON53_tree=null;
        Object YOYAK54_tree=null;
        Object A55_tree=null;
        Object EE56_tree=null;
        Object SARA_II58_tree=null;
        Object O_ANG59_tree=null;
        Object A60_tree=null;
        Object EE61_tree=null;
        Object SARA_UEE63_tree=null;
        Object TON64_tree=null;
        Object O_ANG65_tree=null;
        Object A66_tree=null;
        Object EE67_tree=null;
        Object SARA_UEE69_tree=null;
        Object O_ANG70_tree=null;
        Object A71_tree=null;
        Object EE72_tree=null;
        Object TON75_tree=null;
        Object YOYAK76_tree=null;
        Object EE77_tree=null;
        Object TON79_tree=null;
        Object SARA_AA80_tree=null;
        Object A81_tree=null;
        Object MAI_HAN_AKAT83_tree=null;
        Object TON84_tree=null;
        Object WA85_tree=null;
        Object TON88_tree=null;
        Object set90_tree=null;
        Object set92_tree=null;
        Object THANTHAKHAT93_tree=null;
        Object TON96_tree=null;
        Object MAITAIKHU98_tree=null;
        Object TON100_tree=null;
        Object AE102_tree=null;
        Object MAITAIKHU104_tree=null;
        Object AE106_tree=null;
        Object THANTHAKHAT109_tree=null;
        Object AE110_tree=null;
        Object TON112_tree=null;
        Object A113_tree=null;
        Object AE114_tree=null;
        Object MAITAIKHU117_tree=null;
        Object AE119_tree=null;
        Object THANTHAKHAT123_tree=null;
        Object OO124_tree=null;
        Object TON126_tree=null;
        Object A127_tree=null;
        Object TON130_tree=null;

        try {
            // /home/nook/NetBeansProjects/JTCC/TCC.g:87:5: ( EE con MAITAIKHU con | EE con con ( TON )? SARA_AA A | EE con con SARA_II ( TON )? YOYAK A | ( EE con con SARA_II ( TON )? YOYAK tccfirst )=> EE con con SARA_II ( TON )? YOYAK | EE con con O_ANG A | EE con con MAITAIKHU con | EE con SARA_I con THANTHAKHAT con | EE con SARA_I ( TON )? con | EE con SARA_II ( TON )? YOYAK A | EE con SARA_II O_ANG ( A )? | EE con SARA_UEE TON O_ANG ( A )? | EE con SARA_UEE O_ANG ( A )? | ( EE con vfront ( TON )? YOYAK tccfirst )=> EE con vfront ( TON )? YOYAK | EE con ( TON )? ( SARA_AA )? ( A )? | con MAI_HAN_AKAT ( TON )? WA | con vback ( TON )? con ( SARA_U | SARA_I | A )? | con ( SARA_I | SARA_U )? THANTHAKHAT | con vneedl ( TON )? | con MAITAIKHU | con ( TON )? ( vO1 )? | AE con MAITAIKHU con | AE con con THANTHAKHAT | AE con ( TON )? A | AE con con MAITAIKHU con | AE con con con THANTHAKHAT | OO con ( TON )? A | vO2 con ( TON )? | dont_know )
            int alt25=28;
            alt25 = dfa25.predict(input);
            switch (alt25) {
                case 1 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:88:6: EE con MAITAIKHU con
                    {
                    root_0 = (Object)adaptor.nil();

                    EE6=(Token)match(input,EE,FOLLOW_EE_in_tcc110); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EE6_tree = (Object)adaptor.create(EE6);
                    adaptor.addChild(root_0, EE6_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc112);
                    con7=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con7.getTree());
                    MAITAIKHU8=(Token)match(input,MAITAIKHU,FOLLOW_MAITAIKHU_in_tcc114); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MAITAIKHU8_tree = (Object)adaptor.create(MAITAIKHU8);
                    adaptor.addChild(root_0, MAITAIKHU8_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc116);
                    con9=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con9.getTree());

                    }
                    break;
                case 2 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:89:6: EE con con ( TON )? SARA_AA A
                    {
                    root_0 = (Object)adaptor.nil();

                    EE10=(Token)match(input,EE,FOLLOW_EE_in_tcc125); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EE10_tree = (Object)adaptor.create(EE10);
                    adaptor.addChild(root_0, EE10_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc127);
                    con11=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con11.getTree());
                    pushFollow(FOLLOW_con_in_tcc129);
                    con12=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con12.getTree());
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:89:17: ( TON )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==TON) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // /home/nook/NetBeansProjects/JTCC/TCC.g:89:17: TON
                            {
                            TON13=(Token)match(input,TON,FOLLOW_TON_in_tcc131); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            TON13_tree = (Object)adaptor.create(TON13);
                            adaptor.addChild(root_0, TON13_tree);
                            }

                            }
                            break;

                    }

                    SARA_AA14=(Token)match(input,SARA_AA,FOLLOW_SARA_AA_in_tcc134); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    SARA_AA14_tree = (Object)adaptor.create(SARA_AA14);
                    adaptor.addChild(root_0, SARA_AA14_tree);
                    }
                    A15=(Token)match(input,A,FOLLOW_A_in_tcc136); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    A15_tree = (Object)adaptor.create(A15);
                    adaptor.addChild(root_0, A15_tree);
                    }

                    }
                    break;
                case 3 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:90:6: EE con con SARA_II ( TON )? YOYAK A
                    {
                    root_0 = (Object)adaptor.nil();

                    EE16=(Token)match(input,EE,FOLLOW_EE_in_tcc144); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EE16_tree = (Object)adaptor.create(EE16);
                    adaptor.addChild(root_0, EE16_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc146);
                    con17=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con17.getTree());
                    pushFollow(FOLLOW_con_in_tcc148);
                    con18=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con18.getTree());
                    SARA_II19=(Token)match(input,SARA_II,FOLLOW_SARA_II_in_tcc150); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    SARA_II19_tree = (Object)adaptor.create(SARA_II19);
                    adaptor.addChild(root_0, SARA_II19_tree);
                    }
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:90:25: ( TON )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==TON) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /home/nook/NetBeansProjects/JTCC/TCC.g:90:25: TON
                            {
                            TON20=(Token)match(input,TON,FOLLOW_TON_in_tcc152); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            TON20_tree = (Object)adaptor.create(TON20);
                            adaptor.addChild(root_0, TON20_tree);
                            }

                            }
                            break;

                    }

                    YOYAK21=(Token)match(input,YOYAK,FOLLOW_YOYAK_in_tcc155); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    YOYAK21_tree = (Object)adaptor.create(YOYAK21);
                    adaptor.addChild(root_0, YOYAK21_tree);
                    }
                    A22=(Token)match(input,A,FOLLOW_A_in_tcc157); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    A22_tree = (Object)adaptor.create(A22);
                    adaptor.addChild(root_0, A22_tree);
                    }

                    }
                    break;
                case 4 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:91:5: ( EE con con SARA_II ( TON )? YOYAK tccfirst )=> EE con con SARA_II ( TON )? YOYAK
                    {
                    root_0 = (Object)adaptor.nil();

                    EE23=(Token)match(input,EE,FOLLOW_EE_in_tcc182); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EE23_tree = (Object)adaptor.create(EE23);
                    adaptor.addChild(root_0, EE23_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc184);
                    con24=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con24.getTree());
                    pushFollow(FOLLOW_con_in_tcc186);
                    con25=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con25.getTree());
                    SARA_II26=(Token)match(input,SARA_II,FOLLOW_SARA_II_in_tcc188); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    SARA_II26_tree = (Object)adaptor.create(SARA_II26);
                    adaptor.addChild(root_0, SARA_II26_tree);
                    }
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:91:68: ( TON )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==TON) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // /home/nook/NetBeansProjects/JTCC/TCC.g:91:68: TON
                            {
                            TON27=(Token)match(input,TON,FOLLOW_TON_in_tcc190); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            TON27_tree = (Object)adaptor.create(TON27);
                            adaptor.addChild(root_0, TON27_tree);
                            }

                            }
                            break;

                    }

                    YOYAK28=(Token)match(input,YOYAK,FOLLOW_YOYAK_in_tcc193); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    YOYAK28_tree = (Object)adaptor.create(YOYAK28);
                    adaptor.addChild(root_0, YOYAK28_tree);
                    }

                    }
                    break;
                case 5 :
                    // /home/nook/NetBeansProjects/JTCC/TCC.g:92:6: EE con con O_ANG A
                    {
                    root_0 = (Object)adaptor.nil();

                    EE29=(Token)match(input,EE,FOLLOW_EE_in_tcc200); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    EE29_tree = (Object)adaptor.create(EE29);
                    adaptor.addChild(root_0, EE29_tree);
                    }
                    pushFollow(FOLLOW_con_in_tcc202);
                    con30=con();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, con30.getTree());
                    pushFollow(FOLLOW_con_in_tcc204);
                    con31=con();
